--- a/src/components/Cart/index.css
+++ b/src/components/Cart/index.css
@@ -3,6 +3,80 @@
   justify-content: center;
   min-height: 75vh;
 }
+.cart-summary {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  align-self: flex-end;
+}
+
+.pop-up {
+  border: solid 5px green;
+
+  display: flex;
+
+  flex-direction: column;
+}
+
+.remove-all-button {
+  display: flex;
+
+  align-self: flex-end;
+  border: solid 3px #ffffff;
+}
+
+.all-button {
+  background-color: transparent;
+
+  color: blue;
+}
+
+.check-btn {
+  border: solid 3px goldenrod;
+  border-radius: 7px;
+}
+.success {
+  color: green;
+}
+
+.modal-list {
+  list-style-type: none;
+}
+
+.modal {
+  border: solid grey;
+  padding: 57px;
+  color: #ffffff;
+
+  background-color: #64748b;
+  border-radius: 23px;
+
+  height: 63vh;
+
+
+
+  border: solid 3px blue;
+}
+.confirm-button {
+  margin-left: 33px;
+  background-color: blue;
+  border-radius: 21px;
+  color: #ffffff;
+}
+.modal > .close {
+  cursor: pointer;
+  position: absolute;
+  display: block;
+  padding: 2px 5px;
+  line-height: 20px;
+  right: -10px;
+  top: -10px;
+  font-size: 24px;
+  background: #ffffff;
+  border-radius: 18px;
+  border: 1px solid #cfcece;
+}
 
 @media screen and (min-width: 768px) {
   .cart-container {
