--- a/src/components/SimilarProductItem/index.css
+++ b/src/components/SimilarProductItem/index.css
@@ -3,7 +3,11 @@
   flex-direction: column;
   list-style-type: none;
 }
+.similar-link{
 
+text-decoration: none;
+
+}
 @media screen and (min-width: 768px) {
   .similar-product-item {
     width: 200px;
