--- a/src/App.css
+++ b/src/App.css
@@ -10,3 +10,16 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+.dark-mode{
+
+  background-color: black;
+}
+
+
+.app {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  padding: 2rem;
+  background: #f5f5f5;
+}
